--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000">
-    <meta property="title" content="I Miss Summer">
-    <meta name="description"
-      content="Explore lyrics, photos, videos, and merch to accompany the second EP by Toronto band, Rose Red Youth. I Miss Summer - Available now.">
-    <meta property="image" content="https://roseredbucket.s3.amazonaws.com/ims.png" />
-    <meta property="url" content="https://roseredyouth.com">
+    <meta name="theme-color" content="#000000" />
+    <meta property="title" content="love you more" />
+    <meta
+      name="description"
+      content="Pre-save Let's Just Be Friends by Rose Red Youth."
+    />
+    <meta
+      property="image"
+      content="https://distrokid.imgix.net/http%3A%2F%2Fgather.fandalism.com%2F1213328--D627A3F7-75AD-4BB1-AB28B07BB93B09F5--1617141699071--finalart.png?fm=jpg&q=75&w=800&s=751635de5c33637a987630e224bd6170"
+    />
+    <meta property="url" content="https://roseredyouth.com" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-136878802-1"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || []
       function gtag() {
-        dataLayer.push(arguments);
+        dataLayer.push(arguments)
       }
-      gtag("js", new Date());
+      gtag("js", new Date())
 
-      gtag("config", "UA-136878802-1");
+      gtag("config", "UA-136878802-1")
     </script>
-
-
 
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -50,12 +53,12 @@
     -->
     <title>Rose Red Youth</title>
     <script>
-      const host = "www.roseredyouth.com" || "roseredyouth.com";
+      const host = "www.roseredyouth.com" || "roseredyouth.com"
       if (
         host == window.location.host &&
         window.location.protocol == "https:"
       ) {
-        window.location.protocol = "http";
+        window.location.protocol = "http"
       }
     </script>
   </head>
